# replayCI

./: .gitignore  README.md  pyproject.toml  todo.md
replayci/: cli.py
replayci/agent/: research_agent.py
replayci/runlog/: events.py  recorder.py
replayci/scenario/: loader.py
replayci/tools/: executor.py  hashing.py  registry.py
scenarios/: s01_basic_research.yaml
